Fixed buggy mobile experience | Desktop to Mobile resizing was viewable and snappy on mobile, kept in the buggy logo at the top of the page though, I like the look of it

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -50,8 +50,8 @@ a{
 }
 
 .navbar a:hover{
+    transform: scale(1.1);
     color: rgb(0, 128, 43);
-    letter-spacing: 2px;
     text-decoration: overline;
 }
 
@@ -216,4 +216,12 @@ a{
 
 .mail{
     filter: invert(100%);
+}
+
+@media (max-width: 768px) {
+    .navbar{
+        font-size: 14px;
+        padding: 8px;
+        transform: none;
+    }
 }
